# zamanbot

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  analytics.py  config.py  conversation.py  docker-compose.yml  investment_advice.py  llm_tools.py  main.py  openai_client.py  pyproject.toml  quick_replies.py  router.py  saving_strategies.py  seed_db_script.py  user_grouping.py
alembic/: env.py
alembic/versions/: 38be0198715a_init_schema.py  a4b6a653b3ad_enable_pgcrypto.py  b028a0e3366a_enable_pgcrypto.py  b793e45fbcae_init_schema.py  c3977171e717_init_schema.py
bot/: main.py
bot/handlers/: start.py
data/: transactions.csv
db/: __init__.py  models.py
faq_rag/: estimate_rag_cost.py  faq_rag.py  regen_db.py
faq_rag/data/ru/: about_bank.txt  bot.txt  contacts.json  faq.json  glossary.json  help.json  learn_more.json  products.json
faq_rag/rag_db/: default__vector_store.json  docstore.json  index_store.json
